Add subnet creation, remove defer closes
