# model/subnetModel.go
@@ -18,7 +18,109 @@ package model
 
 */
 
-import "database/sql"
+import (
+	"database/sql"
+	"fmt"
+	"log"
+	"strconv"
+
+	"github.com/seancfoley/ipaddress-go/ipaddr"
+)
+
+func createDynamicNetworkTable(networkName string, networkPrefix string, bitmask int) (bool, error) {
+	t, err := DB.Begin()
+	if err != nil {
+		return false, err
+	}
+
+	createStatement := `CREATE TABLE IF NOT EXISTS ` + networkName + `(
+		Id	            INTEGER PRIMARY KEY AUTOINCREMENT
+						UNIQUE	NOT NULL,
+		IpAddress		STRING	UNIQUE	NOT NULL,
+		AssignmentState	BOOL	NOT NULL	DEFAULT (0)
+	)`
+
+	q, err := t.Prepare(createStatement)
+	if err != nil {
+		return false, err
+	}
+	_, err = q.Exec()
+	if err != nil {
+		return false, err
+	}
+
+	t.Commit()
+
+	log.Println("INFO: Populating addresses for dynamic table '" + networkName + "'")
+	_, err = populateAddresses(networkName, networkPrefix, bitmask)
+	if err != nil {
+		// TODO: revert adding table if error occurs when populating it
+		return false, err
+	}
+
+	return true, nil
+}
+
+func populateAddresses(networkName string, networkPrefix string, bitmask int) (bool, error) {
+	t, err := DB.Begin()
+	if err != nil {
+		return false, err
+	}
+
+	subnet := ipaddr.NewIPAddressString(networkPrefix + "/" + strconv.Itoa(bitmask)).GetAddress().WithoutPrefixLen()
+	netAddr := subnet.GetNetIP()
+	bcastAddr := subnet.GetUpper()
+	iterator := subnet.Iterator()
+	for next := iterator.Next(); next != nil; next = iterator.Next() {
+		q, err := t.Prepare("INSERT INTO " + networkName + " (IpAddress) VALUES (?)")
+		if err != nil {
+			return false, err
+		}
+		address := fmt.Sprintf("%s", next)
+		if address == netAddr.String() {
+			continue
+		}
+		if address == bcastAddr.String() {
+			continue
+		}
+		_, err = q.Exec(address)
+		if err != nil {
+			return false, err
+		}
+	}
+
+	t.Commit()
+
+	return true, nil
+}
+
+func CreateSubnet(s Subnet, id int) (bool, error) {
+	t, err := DB.Begin()
+	if err != nil {
+		return false, err
+	}
+
+	q, err := t.Prepare("INSERT INTO Subnets (NetworkName, NetworkPrefix, BitMask, GatewayAddress, DomainId, CreatorId) VALUES (?, ?, ?, ?, ?, ?)")
+	if err != nil {
+		return false, err
+	}
+	_, err = q.Exec(s.NetworkName, s.NetworkPrefix, s.BitMask, s.GatewayAddress, s.DomainId, id)
+	if err != nil {
+		return false, err
+	}
+
+	t.Commit()
+
+	// now create the dynamic table for the ip range
+	log.Printf("INFO: Creating dynamic table for '" + s.NetworkName + "' addresses")
+	_, err = createDynamicNetworkTable(s.NetworkName, s.NetworkPrefix, s.BitMask)
+	if err != nil {
+		// TODO: revert transaction if subnet dynamic table cannot be built
+		return false, err
+	}
+
+	return true, nil
+}
 
 func GetSubnetById(id int) (Subnet, error) {
 	rec, err := DB.Prepare("SELECT * FROM Subnets WHERE Id = ?")
@@ -79,7 +181,6 @@ func GetSubnestByDomainId(id int) ([]Subnet, error) {
 	if err != nil {
 		return nil, err
 	}
-	defer rows.Close()
 
 	subnets := make([]Subnet, 0)
 	for rows.Next() {
@@ -108,6 +209,7 @@ func GetSubnestByDomainName(domainname string) ([]Subnet, error) {
 	if err != nil {
 		return nil, err
 	}
+
 	var id int
 	err = rec.QueryRow(domainname).Scan(
 		&id,
@@ -120,7 +222,6 @@ func GetSubnestByDomainName(domainname string) ([]Subnet, error) {
 	if err != nil {
 		return nil, err
 	}
-	defer rows.Close()
 
 	subnets := make([]Subnet, 0)
 	for rows.Next() {
@@ -149,7 +250,6 @@ func GetSubnets() ([]Subnet, error) {
 	if err != nil {
 		return nil, err
 	}
-	defer rows.Close()
 
 	subnets := make([]Subnet, 0)
 	for rows.Next() {
